--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -2,6 +2,8 @@ accountID: "89499"
 SDKKey: "7aeed7f67f5a0b0fbe476c1f086a7038"
 abCampaignKey: "hhjjjj"
 abCampaignGoalIdentifier: "rev"
+featureRolloutCampaignKey: "php1"
+featureTestCampaignKey: "php4"
 pollTime: 10000
 port: ":3000"
 userData: {
