--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,23 +1,24 @@
 accountID: "89499"
 SDKKey: "7aeed7f67f5a0b0fbe476c1f086a7038"
-abCampaignKey: "hhjjjj"
-abCampaignGoalIdentifier: "rev"
+abCampaignKey: "rubyab1"
+abCampaignGoalIdentifier: "custom"
 featureRolloutCampaignKey: "php1"
 featureTestCampaignKey: "php2"
 pollTime: 10000
 port: ":3000"
-userData: {
-  "hhjjjj" : [
-    {
- 		  "UserID": "Chris",
-      "CampaignKey": "hhjjjj",
-      "VariationName": "Variation-1",
- 		},
- 		{
- 			"UserID": "Bill",
-      "CampaignKey": "hhjjjj",
-      "VariationName": "Control",
- 		}
-  ]
-}
-
+userData:
+  {
+    "hhjjjj":
+      [
+        {
+          "UserID": "Chris",
+          "CampaignKey": "hhjjjj",
+          "VariationName": "Variation-1",
+        },
+        {
+          "UserID": "Bill",
+          "CampaignKey": "hhjjjj",
+          "VariationName": "Control",
+        },
+      ],
+  }
