--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,6 +1,6 @@
 accountID: "89499"
 SDKKey: "7aeed7f67f5a0b0fbe476c1f086a7038"
-abCampaignKey: "phpab3"
+abCampaignKey: "rubyab1"
 abCampaignGoalIdentifier: "custom"
 featureRolloutCampaignKey: "php1"
 featureTestCampaignKey: "php2"
