--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,7 +1,8 @@
-accountID: ""
-SDKKey: ""
-abCampaignKey: ""
-abCampaignGoalIdentifier: ""
-featureRolloutCampaignKey: ""
-featureTestCampaignKey: ""
+accountID: "89499"
+SDKKey: "7aeed7f67f5a0b0fbe476c1f086a7038"
+abCampaignKey: "phpab3"
+abCampaignGoalIdentifier: "custom"
+featureRolloutCampaignKey: "php1"
+featureTestCampaignKey: "php2"
+pollTime: 10000
 port: ":3000"
