--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,8 +1,9 @@
-accountID: "89499"
-SDKKey: "7aeed7f67f5a0b0fbe476c1f086a7038"
-abCampaignKey: "phpab3"
-abCampaignGoalIdentifier: "custom"
-featureRolloutCampaignKey: "php1"
-featureTestCampaignKey: "php2"
+accountID: ""
+SDKKey: ""
+isDevelopmentMode: true
+abCampaignKey: ""
+abCampaignGoalIdentifier: ""
+featureRolloutCampaignKey: ""
+featureTestCampaignKey: ""
 pollTime: 10000
 port: ":3000"
